fixed style to make titles more readable

--- a/css/theme/arduino.css
+++ b/css/theme/arduino.css
@@ -53,10 +53,10 @@ body {
   line-height: 0.9em;
   letter-spacing: 0.02em;
   text-transform: uppercase;
-  text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2); }
+  text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2); }
 
 .reveal h1 {
-  text-shadow: 0 1px 0 #444, 0 2px 0 #424242, 0 3px 0 #333, 0 4px 0 #323232, 0 5px 0 #222, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.15);
+  text-shadow: 0 1px 0 #999, 0 2px 0 #929292, 0 3px 0 #888, 0 4px 0 #828282, 0 5px 0 #777, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.15);
   font-size: 150%; }
 .reveal h2 {
   font-size: 135%; }
